# chunkreader-rust-c-ffi

./: .gitignore  Cargo.toml  build.rs  wrapper.h
C/chunk-reader/: CMakeLists.txt
C/chunk-reader/include/: chunk-reader.h
C/chunk-reader/src/: chunk-reader.c  main.c
src/: bindings.rs  lib.rs  main.rs
